packages/starlight-site-graph/styles/common.css
:root {
	--slsg-graph-width: 250px;
	--slsg-graph-height: 250px;

	--slsg-background-color: var(--slsg-background-color-minimized);
	--slsg-background-color-minimized: var(--sl-color-bg);
	--slsg-background-color-maximized: var(--sl-color-bg-nav);
}

:root[data-theme='dark'] {
	--slsg-node-color: var(--sl-color-white);
	--slsg-node-color-hover: var(--sl-color-accent-high);
	--slsg-node-color-muted: var(--sl-color-gray-5);
	--slsg-node-color-adjacent: var(--sl-color-gray-2);

	--slsg-node-color-current: var(--sl-color-green-high);
	--slsg-node-color-visited: var(--sl-color-orange-high);
	--slsg-node-color-unresolved: var(--sl-color-red-high);
	--slsg-node-color-external: var(--sl-color-purple-high);

	--slsg-node-color-tag: #c3a6ff;
	--slsg-node-color-1: #ff7d82;
	--slsg-node-color-2: #ffb07a;
	--slsg-node-color-3: #ffd66f;
	--slsg-node-color-4: #dee169;
	--slsg-node-color-5: #a6e75c;
	--slsg-node-color-6: #76bf93;
	--slsg-node-color-7: #4e9cdf;
	--slsg-node-color-8: #6a86d1;
	--slsg-node-color-9: #a287ca;

	--slsg-link-color: var(--sl-color-gray-4);
	--slsg-link-color-hover: var(--sl-color-accent-high);
	--slsg-link-color-muted: var(--sl-color-gray-5);

	--slsg-label-color: var(--sl-color-text);
	--slsg-label-color-hover: var(--sl-color-accent-high);
	--slsg-label-color-muted: var(--sl-color-text);
}

:root[data-theme='light'] {
	--slsg-node-color: var(--sl-color-gray-3);
	--slsg-node-color-hover: var(--sl-color-accent);
	--slsg-node-color-muted: var(--sl-color-gray-5);
	--slsg-node-color-adjacent: var(--sl-color-gray-4);

	--slsg-node-color-current: var(--sl-color-green);
	--slsg-node-color-visited: var(--sl-color-orange);
	--slsg-node-color-unresolved: var(--sl-color-red);
	--slsg-node-color-external: var(--sl-color-purple);

	--slsg-node-color-tag: #a17bf8;
	--slsg-node-color-1: #ff595e;
	--slsg-node-color-2: #ff924c;
	--slsg-node-color-3: #ffca3a;
	--slsg-node-color-4: #c5ca30;
	--slsg-node-color-5: #8ac926;
	--slsg-node-color-6: #52a675;
	--slsg-node-color-7: #1982c4;
	--slsg-node-color-8: #4267ac;
	--slsg-node-color-9: #7d5ba6;

	--slsg-link-color: var(--sl-color-gray-5);
	--slsg-link-color-hover: var(--sl-color-accent);
	--slsg-link-color-muted: var(--sl-color-gray-6);

	--slsg-label-color: var(--sl-color-text);
	--slsg-label-color-hover: var(--sl-color-accent);
	--slsg-label-color-muted: var(--sl-color-text);
}

/* ========================================= Sidebar Styling ================================================ */
.graph-panel,
.backlinks-panel {
	padding: 1rem var(--sl-sidebar-pad-x);

	h2 {
		color: var(--sl-color-white);
		font-size: var(--sl-text-h5);
		font-weight: 600;
		line-height: var(--sl-line-height-headings);
		margin-bottom: 0.5rem;
	}
}

/* Move graph and other contents in page sidebar into bottom of page */
@media (max-width: 1152px) {
	.main-frame > div:has(.graph-panel) {
		display: flex;
		flex-direction: column-reverse;
		.right-sidebar {
			display: flex;
			flex-wrap: wrap;

			.graph-panel {
				flex-grow: 1;
				width: 50%;
				min-width: var(--slsg-graph-width);

				.graph-component {
					width: 100%;
				}
			}

			.backlinks-panel {
				flex-grow: 1;
				width: 50%;
			}
		}
	}
}

/* =================================== Graph Container Styling ============================================== */
.graph-component {
	width: var(--slsg-graph-width);
	height: var(--slsg-graph-height);
}

.graph-container {
	position: relative;
	width: inherit;
	height: inherit;

	box-sizing: border-box;

	border-radius: 5px;
	background-color: var(--slsg-background-color);
	outline: 1px solid var(--sl-color-gray-6);

	canvas {
		width: inherit;
		height: inherit;
		border-radius: inherit;
	}
}

/* ========================================================================================================= */

/* ====================================== Graph Stats Styling ============================================== */

#graphStats {
	position: fixed;
	bottom: 40px;
	right: 10px;
	z-index: 500;
	width: max(200px, 15vw, 15vh);
	height: max(100px, 6vh, 6vw);
	opacity: 0.6;
	user-select: none;
	cursor: pointer;
}

/* ========================================================================================================= */

/* ====================================== Fullscreen Styling =============================================== */

body:has(.background-blur) {
	#starlight__sidebar {
		z-index: -1;
	}

	.header {
		z-index: -1;
	}

	.right-sidebar:not(:has(.is-fullscreen)) {
		z-index: -1;
	}
}

.background-blur {
	position: fixed;
	top: 0;
	left: 0;

	backdrop-filter: blur(4px);
	width: 100%;
	height: 100%;

	z-index: 10;
}

.is-fullscreen {
	--slsg-background-color: var(--slsg-background-color-maximized);

	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 1000;

	outline: unset;

	height: 60vh;
	width: 50vw;

	.graph-action-container svg {
		width: 24px;
		height: 24px;
	}
}

@media (max-width: 1152px) {
	.is-fullscreen {
		height: 80vh;
		width: 80vw;
	}
}

/* ========================================================================================================== */

/* ====================================== Graph Action Styles =============================================== */

.graph-action-container:not(:empty) {
	position: absolute;
	right: 0;

	display: flex;
	flex-direction: row;
	gap: 0.2rem;
	padding: 0.2rem 0.2rem 0.4rem 0.5rem;

	background-color: color-mix(in srgb, var(--slsg-background-color) 80%, transparent);
	border-radius: 0 0 0 16px;
	backdrop-filter: blur(4px);
}

.graph-action-button {
	display: flex;

	color: var(--sl-color-white);
	background-color: transparent;
	transition: background-color 0.3s ease;

	border: unset;
	border-radius: 4px;

	padding: 0.2rem;
	opacity: 0.5;

	cursor: pointer;

	&:hover {
		background-color: var(--sl-color-gray-5);
	}

	svg {
		width: 16px;
		height: 16px;
	}
}

/* ========================================================================================================== */

/* ======================================== Backlink Styling ================================================ */

.backlink {
	padding: 0;
	list-style: none;

	a {
		display: block;
		font-size: var(--sl-text-xs);
		text-decoration: none;
		color: var(--sl-color-text-accent);
		overflow-wrap: anywhere;

		&:hover {
			color: var(--sl-color-white);
			text-decoration: underline;
		}

		--pad-inline: 0.5rem;
		border-radius: 0.25rem;
		padding-block: 0.25rem;
		padding-inline: calc(1rem * var(--depth) + var(--pad-inline)) var(--pad-inline);
		line-height: 1.25;
	}
}

/* ========================================================================================================== */

/* ====================================== Context Menu Styles =============================================== */

.menu-container {
	position: fixed;
	z-index: 1000;
}

.menu {
	display: inline-flex;
	background-color: var(--sl-color-gray-6);
	border: 1px var(--sl-color-gray-4) solid;
	width: 170px;
	border-radius: 10px;
	overflow: hidden;
	flex-direction: column;
	padding: 6px;
}

.menu-item {
	display: flex;
	align-items: center;
	gap: 8px;
	padding: 2px 4px;
	margin: 0 2px;
	border-radius: 4px;
	white-space: nowrap;
}

.menu-item:hover {
	background-color: var(--sl-color-gray-5);
}

.menu-item-icon {
	display: flex;
}

.menu-item-icon svg {
	width: 20px;
	height: 20px;
}

.menu-item-title {
	font-weight: 600;
	font-size: var(--sl-text-xs);
}
/* ========================================================================================================== */

/* ======================================== Popup Menu Styling ============================================== */

.popup-menu {
	position: fixed;
	z-index: 1000;
	right: 8px;
	top: 8px;

	background-color: color-mix(in srgb, var(--slsg-background-color) 90%, transparent);
	border: 1px solid var(--sl-color-gray-6);
	border-radius: 8px;
	padding: 8px;

	overflow: hidden;

	backdrop-filter: blur(32px);

	.value-slider {
		display: flex;
		font-size: var(--sl-text-xs);
		flex-wrap: wrap;

		.value-slider-text {
			display: flex;
			gap: 0.5rem;
		}

		.value-slider-label {
			font-weight: 900;
		}
	}
}

